--- a/equipes.html
+++ b/equipes.html
@@ -314,7 +314,7 @@ function sortRows(rows){
       }
       emptyEl.style.display = "none";
 
-      for (const r of sortrows(rows)){
+      for (const r of sortRows(rows)){
         const row = document.createElement("div");
         row.className = "row";
 
