--- a/equipes.html
+++ b/equipes.html
@@ -340,7 +340,7 @@
       <div class="chef">
         <div>Chef de centre</div>
         <!-- ✅ Tu modifies ici le nom -->
-        <div class="name">Nom : <strong id=" ADC VÉNANTE Pierre">À renseigner</strong></div>
+        <div class="name">Nom : <strong id="chefName">ADC VÉNANTE Pierre</strong></div>
       </div>
 
       <div class="connector"></div>
