--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@ body::before{
 
     <a class="btn" href="book.html"><img src="book.png" alt="Book"></a>
     <a class="btn" href="galerie.html"><img src="galerie.png" alt="Galerie"></a>
+    
+    <a class="btn" href="admin.html"><img src="admin.png" alt="Admin"></a>
+    <a class="btn" href="gardes postées.html"><img src="gardes postées.png" alt="gardes postées"></a>
+  </section>
+  </section>
   </section>
 </main>
 </body>
