--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ body::before{
     <a class="btn" href="admin.html"><img src="admin.png" alt="Admin"></a>
     <a class="btn" href="gardes postées.html"><img src="gardes postées.png" alt="gardes postées"></a>
 
-     <a class="btn" href="tickts carburant.html"><img src="tickets carburant.png" alt="tickets carburants"></a>
+     <a class="btn" href="tickets carburant.html"><img src="tickets carburant.png" alt="tickets carburants"></a>
+    <a class="btn" href="désinfection VSAV.html"><img src="désinfection VSAV.png" alt="désinfection VSAV"></a>
 
     
   </section>
