--- a/organigramme.html
+++ b/organigramme.html
@@ -1,1 +1,34 @@
+<!doctype html>
+<html lang="fr">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Organigramme - CS Consenvoye</title>
 
+<style>
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background: #000;
+}
+
+.viewer {
+  position: fixed;
+  inset: 0;
+}
+
+.viewer iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+</style>
+</head>
+
+<body>
+<div class="viewer">
+  <iframe src="organigramme.pdf"></iframe>
+</div>
+</body>
+</html>
